# cmake-101

./: CMakeLists.txt  README.md
